frontend/src/App.css
/* ... */
.popup-inner {
  position: relative;
  padding: 20px 10px 20px 20px;
  width: 100%;
  max-width: 370px;
  height: 420px;
  background-color: var(--mid-gray);
  color: white;
  border-radius: 20px;
}
.popup-close {
  margin-top: 10px;
}

.invisible-popup {
  visibility: hidden;
  position: absolute;
  top: 0px;
  z-index: -1;
}
.visible-popup {
  position: relative;
}

/* Timeblocking Categories Popup Styling */

.popup-timeblock-container {
  position: absolute;
  z-index: 100;
}

@keyframes fadeInRight {
  0% {
    opacity: 0;
    transform: translate(5%, -50%);
  }
  100% {
    opacity: 1;
    transform: translate(0, -50%);
  }
}

.popup-timeblock-relative {
  position: relative;
  left: 113%;
  transform: translate(0, -50%);
  display: flex;
  flex-direction: column;
  background-color: var(--mid-gray2);
  padding: 15px;
  border-radius: 10px;
  box-shadow: var(---popup-shadow);
  margin-right: 10px;
  animation: fadeInRight 0.5s;
}

.popup-timeblock-arrow {
  position: absolute;
  top: 45%;
  left: -5px;
  width: 0;
  height: 0;
  transform: translate(-50%, -50%);
  border-top: 10px solid transparent;
  border-bottom: 10px solid transparent;
  border-right: 10px solid var(--mid-gray2);
}

.popup-timeblock-bckgrnd {
  position: absolute;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 105;
  top: calc(var(--timeblock-pop-h) / 2 * -1 + 12);
  transform: translateX(23px);
  width: var(--timeblock-pop-w);
  height: var(--timeblock-pop-h);
  /* background-color: var(--mid-gray2);
  border: 2px;
  border-radius: 8px;
  box-shadow: var(--popup-shadow); */
}

.popup-timeblock-text {
  width: 125px;
  margin: 2px 0px 2px 0px;
  border-radius: 6px;
  z-index: 120;
}
.popup-timeblock-text:focus {
  outline: solid 1px var(--primary-green);
}
.categories-container {
}
.categories-list {
  display: flex;
  flex-direction: column;
  z-index: 1001;
}
.categories-element {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
}
.categories-item {
  justify-content: flex-start;
}
.categories-item:hover {
  color: var(--accent-green);
}
.picker-compact {
  position: absolute;
  right: 100%;
  z-index: 3000;
}

/* -------------------------- */

/* MODAL STYLING */

.modal-background {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.7);
  z-index: 1000;
}

.modal {
  position: relative;
  padding: 20px 10px 20px 20px;
  width: 100%;
  max-width: 370px;
  height: 50%;
  max-height: 460px;
  background-color: var(--mid-gray);
  color: white;
  border-radius: 20px;
}

.nested-modal-background {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.7);
  z-index: 1002;
}
.nested-modal-timeblock {
  position: fixed;
  width: 100%;
  max-width: 380px;
  height: 25%;
  max-height: 240px;
  background-color: var(--mid-gray);
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 20px;
  z-index: 1004;
}

/* -------------------------- */

/* Side Bar styling */
.left-sidebar-sm {
  position: relative;
  width: 5%;
  min-height: 100vh;
  left: 0px;
  background-color: var(--mid-gray);
  float: left;
  box-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.2);
  z-index: 2;
}

.left-sidebar {
  position: relative;
  width: 15%;
  min-height: 100vh;
  min-width: 210px;
  left: 0px;
  background-color: var(--mid-gray);
  float: left;
  box-shadow: 0.5px 0px 1px rgba(0, 0, 0, 0.2);
  z-index: 2;
}
.left-sb-logo {
  font-size: 24px;
  padding: 5px 10px 10px 5px;
  background-color: var(--primary-green);
  color: white;
  box-shadow: 0.5px 0px 5px rgba(0, 0, 0, 0.6);
  /* border-bottom: solid var(--accent3) 0.5px; */
  margin-bottom: 25px;
}
.left-sb-navigation {
  display: flex;
  flex-direction: column;
  padding: 0px 0px 0px 0px;
  margin: 0;
  list-style-type: none;
  position: relative;
}
.left-sb-element {
  display: flex;
  position: relative;
  align-items: flex-start;
  font-size: 18px;
  margin: 0px;
  color: white;
  /* margin: 5px 10px 25px 10px; */
  padding: 10px;
  cursor: pointer;
}

.left-sb-element::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
  background-color: var(--accent1);
  transition: border-radius 1ms ease;
  transition: transform 300ms ease-in-out;
  transform: scaleX(0);
  transform-origin: left;
}

.left-sb-element:hover::before,
.left-sb-element:focus::before {
  transform: scaleX(1);
}

/* Buckets Styling */
.bucket-container {
  margin-top: 3rem;
}
.bucket-list {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}
.buckets {
  position: relative;
}

.buckets-title {
  display: flex;
  background-color: var(--bgrnd-green);
}

.buckets-header {
  display: flex;
  justify-content: flex-start;
  padding: 0rem 0rem 0rem 0.5rem;
  font-size: 22px;
  color: white;
  cursor: default;
}

.bucket-item-edit {
  display: flex;
  justify-content: flex-start;
  outline: none;
  color: white;
  border: none;
  border-bottom: solid 2px var(--top-gray);
  flex-grow: 4;
}

.bucket-item {
  color: white;
  cursor: pointer;
  white-space: nowrap;
}
.bucket-item:hover {
  color: var(--accent1);
}
.buckets-add {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  padding-right: 0.5rem;
  margin-top: auto;
  margin-bottom: auto;
  color: white;
  cursor: pointer;
}
.buckets-add:hover {
  opacity: 0.5;
}

.buckets-popup {
  width: 500px;
  height: 500px;
}
.bucket-list-sizing {
  overflow-y: scroll;
  overflow-x: hidden;
  height: 325px;
}

.bucket-list-pop {
  display: flex;
  flex-direction: column;
  padding: 0;
  margin-right: 3px;
}
.bucket-elements-pop {
  display: flex;
  flex-direction: column;
}
/* ... */

